tests/bad/member_on_int.td
/// fail: Can't set member on object of type int

let x = 10
x.y = 10